--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 }
 .modal1 {
   height:75%;
-  margin: 3% auto;
+  margin:5% auto;
   max-height: 57em;
   max-width:66em;
   width:85%;
@@ -138,11 +138,74 @@ body, html {
   height: 100%;
   overflow-y:hidden;
 }
-#output-container {
-  border: 0px;
-  margin: 0px;
+#editor {
+    position: absolute;
+    left: 0;
+    right: 50%;
+    bottom: 0;
+    top: 52.4px;
+}
+iframe {
+    position: absolute;
+    left: 50%;
+    top: 52.4px;
+}
+#editor, iframe {
+  width: 50%;
+  height: 100%;
+  overflow-x: hidden;
+  z-index: 999;
+}
+body .ace_scrollbar-v {
+    overflow-y: hidden;
+}
+
+body .ace_scrollbar-h {
+    overflow-x: hidden;
+}
+.modal1overlay {
+  z-index:99999999999;
   width: 100%;
-  height: 93%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  visibility: hidden;
+  position: absolute;
+  display: block;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s linear;
+}
+.zoomin:hover,.zoomout:hover {
+  cursor: pointer;
+}
+ .modal1 {
+  z-index: 999999999;
+  position:absolute;
+  visibility: hidden;
+  background-color: white;
+  top:0%;
+  left:15%;
+  height: auto;
+  padding:20px;
+  display: block;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.3s linear;
+}
+@media (max-width: 900px) {
+    #editor {
+        right: 0;
+        bottom: 50%;
+        height: 47%;
+        width: 100%;
+    }
+
+    iframe {
+        left: 0;
+        bottom: 0;
+        top: unset;
+        margin: auto;
+        height: 46%;
+        width: 100%;
+    }
 }
 
 .dropbtn:hover {
@@ -198,7 +261,7 @@ input:focus ~ label, input:valid ~ label 		{
   width: 0;
   bottom:1px;
   position:absolute;
-  background:#ccc;
+  background:#191919;
   transition:0.2s ease all;
   -moz-transition:0.2s ease all;
   -webkit-transition:0.2s ease all;
@@ -235,14 +298,14 @@ input:focus ~ .highlight {
 
 /* ANIMATIONS ================ */
 @-webkit-keyframes inputHighlighter {
-	from { background:#ccc; }
+	from { background:#191919; }
   to 	{ width:0; background:transparent; }
 }
 @-moz-keyframes inputHighlighter {
-	from { background:#ccc; }
+	from { background:#191919; }
   to 	{ width:0; background:transparent; }
 }
 @keyframes inputHighlighter {
-	from { background:#ccc; }
+	from { background:#191919; }
   to 	{ width:0; background:transparent; }
 }
